--- a/TwitterSentimentAnalysis.ipynb
+++ b/TwitterSentimentAnalysis.ipynb
@@ -12,6 +12,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import nltk\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "import string"
    ]
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b7350811",
    "metadata": {},
    "outputs": [
@@ -295,7 +296,7 @@
        "array([0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "8170f98a",
    "metadata": {},
    "outputs": [
@@ -321,7 +322,7 @@
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "afc97ee5",
    "metadata": {},
    "outputs": [
@@ -353,22 +354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "28f46656",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16686    #gfest #muskogee #notputtogether #whattheheck ...\n",
-       "15271    quotestags_app #depressed #feelings #quote #br...\n",
-       "10314                  @user many haters witjin human race\n",
-       "23171    tom jerry + icepole - see someone feeling bett...\n",
-       "7035                   day ruined kill now!! #done #ruined\n",
+       "9478     happy world gin day one all! #worldginday #fav...\n",
+       "27661    looking feel #joy? join 20 speakers free summi...\n",
+       "12940    oh, leeds... love you! looking beautiful sunsh...\n",
+       "7722     yoyas market deming nm sell beer i'm white sai...\n",
+       "322                     hahaha.. last #friday &amp; #weird\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,22 +384,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "9d2ce544",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10476                                oh god  ass cute sexy\n",
-       "30463    life good  whenintagaytay goodvibes smile me v...\n",
-       "23653    joking matter officers fired joke target pract...\n",
-       "27895    message hope newyear building business end sto...\n",
-       "15460    operation 365 2  jefferson jay  covers  178 bo...\n",
+       "24909                               join trump melania way\n",
+       "6035     things change consider normal way life heabrok...\n",
+       "9648     u  think that u somebodys reason masturbate th...\n",
+       "7681     came home ððð wifehappylife wifehappy...\n",
+       "11503    look got running truckerhat user thank u user ...\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,22 +417,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b4357e3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9377                     user user mom recent ððð\n",
-       "14786    tipical fly mode bike ride everything everywhe...\n",
-       "2663                                  user game 61st quaer\n",
-       "15866                        u gotta reset alarms 6 go run\n",
-       "9342     wise words often come black americans reaction...\n",
+       "5926     ð´ð¸ð´ shootingshootsarushimaislandsumme...\n",
+       "31746                 user thank thoughts prayers victims \n",
+       "5606                         user gearing user sclhorizons\n",
+       "5079     conservative white boys yea calling punks boy ...\n",
+       "21750    get groove on pay stas tonight beduin 6pm5am d...\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,22 +446,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "b5749bc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11810       tennessee 5 daysð graceland bearails hiking\n",
-       "18423                                        user e s ð\n",
-       "24707    cant wait superman celebration user im going1t...\n",
-       "14277                                    babies fathersday\n",
-       "25392    user please correct universal blood donor is o...\n",
+       "3344     shows animals every bit emotional amp capable ...\n",
+       "20914    user sneak peek next issue on sale tomorrow wo...\n",
+       "24856    amazing much mood improve deciding let go prod...\n",
+       "11965            wrong some people ððorlandoshooting\n",
+       "2926     ð user user team new mc user amp show phill...\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,22 +475,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f14da0fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6253             user saturday morning wonderful followers\n",
-       "12342    italy tomorrow client pr work lifeofluxuries b...\n",
-       "20325    user  man may afraid him anyone found willing ...\n",
-       "28852    little polski sklep good me agingdisgracefully...\n",
-       "27283          wanna watch conjuring you one wants come me\n",
+       "0    user father dysfunctional selfish drags kids d...\n",
+       "1    user user thanks lyft credit cant use cause of...\n",
+       "2                                       bihday majesty\n",
+       "3    model love u take u time urð± ðððð...\n",
+       "4                        factsguide society motivation\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,13 +499,208 @@
     "def cleaningNumbers(data):\n",
     "    return re.sub('[0-9]+', '', data)\n",
     "df['tweet'] = df['tweet'].apply(lambda x: cleaningNumbers(x))\n",
-    "df['tweet'].sample(5)"
+    "df['tweet'].head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4b0473f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    " \n",
+    "lemmatizer = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d2d1ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nltkPreprocessing(df):\n",
+    "    df['tweet'] = df.apply(lambda row: nltk.word_tokenize(row['tweet']), axis=1)\n",
+    "    df['tweet'] = df['tweet'].apply(lambda x: [lemmatizer.lemmatize(y) for y in x])\n",
+    "    df['tweet'] = [' '.join(map(str, l)) for l in df['tweet']]\n",
+    "    return df\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "58eb386f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfPreprocessed = nltkPreprocessing(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ed0ab2ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>tweet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>user father dysfunctional selfish drag kid dys...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>user user thanks lyft credit cant use cause of...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>bihday majesty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>model love u take u time urð± ðððð...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>factsguide society motivation</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label                                              tweet\n",
+       "0      0  user father dysfunctional selfish drag kid dys...\n",
+       "1      0  user user thanks lyft credit cant use cause of...\n",
+       "2      0                                     bihday majesty\n",
+       "3      0  model love u take u time urð± ðððð...\n",
+       "4      0                      factsguide society motivation"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfPreprocessed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b33b37a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>tweet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31957</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ate user isz youuuððððððð...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31958</th>\n",
+       "      <td>0</td>\n",
+       "      <td>see nina turner airwave trying wrap mantle gen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31959</th>\n",
+       "      <td>0</td>\n",
+       "      <td>listening sad song monday morning otw work sad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31960</th>\n",
+       "      <td>1</td>\n",
+       "      <td>user sikh temple vandalised calgary wso condem...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31961</th>\n",
+       "      <td>0</td>\n",
+       "      <td>thank user follow</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       label                                              tweet\n",
+       "31957      0  ate user isz youuuððððððð...\n",
+       "31958      0  see nina turner airwave trying wrap mantle gen...\n",
+       "31959      0     listening sad song monday morning otw work sad\n",
+       "31960      1  user sikh temple vandalised calgary wso condem...\n",
+       "31961      0                                  thank user follow"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfPreprocessed.tail()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a402e9",
+   "id": "99ab0cf4",
    "metadata": {},
    "outputs": [],
    "source": []
