--- a/TwitterSentimentAnalysis.ipynb
+++ b/TwitterSentimentAnalysis.ipynb
@@ -12,9 +12,14 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import nltk\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "import string"
+    "import string\n",
+    "import unicodedata\n",
+    "import spacy\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier"
    ]
   },
   {
@@ -99,7 +104,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('C:\\\\Users\\\\Z004FPSK\\\\Downloads\\\\TwitterHate.csv')\n",
+    "df = pd.read_csv('TwitterHate.csv')\n",
     "df.head()"
    ]
   },
@@ -272,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1], dtype=int64)"
+       "array([0, 1])"
       ]
      },
      "execution_count": 8,
@@ -293,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1], dtype=int64)"
+       "array([0, 1])"
       ]
      },
      "execution_count": 9,
@@ -357,19 +362,33 @@
    "execution_count": 12,
    "id": "28f46656",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STOPWORDS = set(stopwords.words('english'))\n",
+    "# def cleaningStopwords(text):\n",
+    "#     return \" \".join([word for word in str(text).split() if word not in STOPWORDS])\n",
+    "# df['tweet'] = df['tweet'].apply(lambda text: cleaningStopwords(text))\n",
+    "# df['tweet'].sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d12434b3",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9478     happy world gin day one all! #worldginday #fav...\n",
-       "27661    looking feel #joy? join 20 speakers free summi...\n",
-       "12940    oh, leeds... love you! looking beautiful sunsh...\n",
-       "7722     yoyas market deming nm sell beer i'm white sai...\n",
-       "322                     hahaha.. last #friday &amp; #weird\n",
+       "2738     today beautiful day . time 2 remember beautifu...\n",
+       "29476    @ user good morning rj ji # jiyodilse # salaam...\n",
+       "31467                hi ! # paytoday snapchat : sandy-9791\n",
+       "9261     going miss cheeky birdie next 12 days ! ! ! # ...\n",
+       "3413     beautiful bobo ! love ! # friends # dinner # p...\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,29 +396,33 @@
    "source": [
     "STOPWORDS = set(stopwords.words('english'))\n",
     "def cleaningStopwords(text):\n",
-    "    return \" \".join([word for word in str(text).split() if word not in STOPWORDS])\n",
+    "    tokens = word_tokenize(text)\n",
+    "    tokens = [token.strip() for token in tokens]\n",
+    "    filtered_tokens = [token for token in tokens if token.lower() not in STOPWORDS]\n",
+    "    filtered_text = ' '.join(filtered_tokens)    \n",
+    "    return filtered_text\n",
     "df['tweet'] = df['tweet'].apply(lambda text: cleaningStopwords(text))\n",
     "df['tweet'].sample(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "9d2ce544",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24909                               join trump melania way\n",
-       "6035     things change consider normal way life heabrok...\n",
-       "9648     u  think that u somebodys reason masturbate th...\n",
-       "7681     came home ððð wifehappylife wifehappy...\n",
-       "11503    look got running truckerhat user thank u user ...\n",
+       "9218     happy weddingâ¤ï¸  çµå©å¼ wedding  ãå¹¸...\n",
+       "21341    hea  user  porsche  photo  photography  fun  l...\n",
+       "10017    really  dancing street  streetdance  tinydance...\n",
+       "10246                 thankful health   thankful  positive\n",
+       "19563    today notice sounds  health  user  user  user ...\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,22 +440,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "b4357e3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5926     ð´ð¸ð´ shootingshootsarushimaislandsumme...\n",
-       "31746                 user thank thoughts prayers victims \n",
-       "5606                         user gearing user sclhorizons\n",
-       "5079     conservative white boys yea calling punks boy ...\n",
-       "21750    get groove on pay stas tonight beduin 6pm5am d...\n",
+       "5727      user today going good day ððð¡ð¤ð...\n",
+       "8758      user preparations underway   user  user  user...\n",
+       "26793     user  fridayfeeling tweeters  user  user  che...\n",
+       "18602    ve never seen bigger  happier  smile   bighapp...\n",
+       "25686     user let s vote  ë¹ ì¤  ëì¼  user  060521...\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,22 +469,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "b5749bc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3344     shows animals every bit emotional amp capable ...\n",
-       "20914    user sneak peek next issue on sale tomorrow wo...\n",
-       "24856    amazing much mood improve deciding let go prod...\n",
-       "11965            wrong some people ððorlandoshooting\n",
-       "2926     ð user user team new mc user amp show phill...\n",
+       "24544        user thankful new places   thankful  positive\n",
+       "19001    playing  abandoned toys   spiraling sun  music...\n",
+       "19346    chill  ðð » ðð¹  thankful  blessed  ...\n",
+       "24351     marathon bull  dominate bull direct whatever ...\n",
+       "16565     guy ask change  gave pocket lit cigarette wal...\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,22 +498,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "f14da0fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    user father dysfunctional selfish drags kids d...\n",
-       "1    user user thanks lyft credit cant use cause of...\n",
-       "2                                       bihday majesty\n",
-       "3    model love u take u time urð± ðððð...\n",
-       "4                        factsguide society motivation\n",
+       "14670       thankful family vacations   thankful  positive\n",
+       "4059     jessica dona asian beauty gives happy ending m...\n",
+       "9293     ca nt secular education haredi life  existed b...\n",
+       "30153     user make  quitting  cigarettes  gift loved o...\n",
+       "19237    little things make fianally got order  india  ...\n",
        "Name: tweet, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,114 +522,46 @@
     "def cleaningNumbers(data):\n",
     "    return re.sub('[0-9]+', '', data)\n",
     "df['tweet'] = df['tweet'].apply(lambda x: cleaningNumbers(x))\n",
-    "df['tweet'].head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "4b0473f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.stem import WordNetLemmatizer\n",
-    " \n",
-    "lemmatizer = WordNetLemmatizer()"
+    "df['tweet'].sample(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8d2d1ab4",
+   "id": "d4a402e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nltkPreprocessing(df):\n",
-    "    df['tweet'] = df.apply(lambda row: nltk.word_tokenize(row['tweet']), axis=1)\n",
-    "    df['tweet'] = df['tweet'].apply(lambda x: [lemmatizer.lemmatize(y) for y in x])\n",
-    "    df['tweet'] = [' '.join(map(str, l)) for l in df['tweet']]\n",
-    "    return df\n",
-    "    "
+    "def remove_accented_chars(text):\n",
+    "    text = unicodedata.normalize('NFKD', text).encode('ascii', 'ignore').decode('utf-8', 'ignore')\n",
+    "    return text"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "58eb386f",
+   "id": "305e00b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfPreprocessed = nltkPreprocessing(df)"
+    "df['tweet'] = df['tweet'].apply(lambda x: remove_accented_chars(x))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ed0ab2ec",
+   "id": "407843ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>tweet</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>user father dysfunctional selfish drag kid dys...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>user user thanks lyft credit cant use cause of...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>bihday majesty</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>model love u take u time urð± ðððð...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>factsguide society motivation</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   label                                              tweet\n",
-       "0      0  user father dysfunctional selfish drag kid dys...\n",
-       "1      0  user user thanks lyft credit cant use cause of...\n",
-       "2      0                                     bihday majesty\n",
-       "3      0  model love u take u time urð± ðððð...\n",
-       "4      0                      factsguide society motivation"
+       "12363    bahoom   funny  humor  jokes  joke  wordplay  ...\n",
+       "10958     user s s happening twitter  m engaged amazing...\n",
+       "14355    handsome guy join anchor desk tonight   amp   ...\n",
+       "26394     user  user exactly  feel m butt end giant com...\n",
+       "11927     germanyhetalia bull  dominate bull direct wha...\n",
+       "Name: tweet, dtype: object"
       ]
      },
      "execution_count": 20,
@@ -615,95 +570,199 @@
     }
    ],
    "source": [
-    "dfPreprocessed.head()"
+    "df['tweet'].sample(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b33b37a1",
+   "id": "91b107c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp=spacy.load('en_core_web_sm')\n",
+    "def lemmatize_text(text):\n",
+    "    text = nlp(text)\n",
+    "    text = ' '.join([word.lemma_ if word.lemma_ != '-PRON-' else word.text for word in text])\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c7931dc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['tweet'] = df['tweet'].apply(lambda x: lemmatize_text(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "dcaf6148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df['tweet']\n",
+    "y = df['label']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, stratify=y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fdb11aa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>tweet</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>31957</th>\n",
-       "      <td>0</td>\n",
-       "      <td>ate user isz youuuððððððð...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31958</th>\n",
-       "      <td>0</td>\n",
-       "      <td>see nina turner airwave trying wrap mantle gen...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31959</th>\n",
-       "      <td>0</td>\n",
-       "      <td>listening sad song monday morning otw work sad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31960</th>\n",
-       "      <td>1</td>\n",
-       "      <td>user sikh temple vandalised calgary wso condem...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31961</th>\n",
-       "      <td>0</td>\n",
-       "      <td>thank user follow</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       label                                              tweet\n",
-       "31957      0  ate user isz youuuððððððð...\n",
-       "31958      0  see nina turner airwave trying wrap mantle gen...\n",
-       "31959      0     listening sad song monday morning otw work sad\n",
-       "31960      1  user sikh temple vandalised calgary wso condem...\n",
-       "31961      0                                  thank user follow"
+       "(25569,)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfPreprocessed.tail()"
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "30540d90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25569,)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "43098f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vec = TfidfVectorizer(stop_words='english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8dbc2e58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorize text reviews to numbers\n",
+    "X_train_vec = vec.fit_transform(X_train).toarray()\n",
+    "X_test_vec = vec.transform(X_test).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "acd61681",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(n_estimators=10)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier = RandomForestClassifier(n_estimators = 10)\n",
+    "classifier.fit(X_train_vec, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0a96a11d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = classifier.predict(X_test_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "707a7e87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[5925   20]\n",
+      " [ 244  204]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      1.00      0.98      5945\n",
+      "           1       0.91      0.46      0.61       448\n",
+      "\n",
+      "    accuracy                           0.96      6393\n",
+      "   macro avg       0.94      0.73      0.79      6393\n",
+      "weighted avg       0.96      0.96      0.95      6393\n",
+      "\n",
+      "Accuracy: 0.9587048334115439\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "result = confusion_matrix(y_test, y_pred)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(result)\n",
+    "result1 = classification_report(y_test, y_pred)\n",
+    "print(\"Classification Report:\",)\n",
+    "print (result1)\n",
+    "result2 = accuracy_score(y_test,y_pred)\n",
+    "print(\"Accuracy:\",result2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ab0cf4",
+   "id": "155079f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "adaclassifier = AdaBoostClassifier(n_estimators = 50)\n",
+    "adaclassifier.fit(X_train_vec, y_train)\n",
+    "y_pred = adaclassifier.predict(X_test_vec)\n",
+    "result = confusion_matrix(y_test, y_pred)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(result)\n",
+    "result1 = classification_report(y_test, y_pred)\n",
+    "print(\"Classification Report:\",)\n",
+    "print (result1)\n",
+    "result2 = accuracy_score(y_test,y_pred)\n",
+    "print(\"Accuracy:\",result2)"
+   ]
   }
  ],
  "metadata": {
@@ -722,7 +781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
